# CMakeTesting

./: .atom-build.json  .doxypress.json  .gitignore  .travis.yml  CMakeLists.txt  README.md
CMake/: CompilerOptions.cmake  ConfigureLibraries.cmake  ConfigureLinkLibraries.cmake  ConfigureLinker.cmake  DetermineTarget.cmake  FindSourceFiles.cmake  UtilityFunctions.cmake  VariablesAndOptions.cmake
Include/FireEngine/: CMakeLists.txt
Include/FireEngine/Bob/: Bob.hpp  CMakeLists.txt
Include/FireEngine/Math/: CMakeLists.txt  Vec3.hpp
Include/FireEngine/Utility/: Bitset.hpp  CMakeLists.txt  TypeTraits.hpp
Source/: CMakeLists.txt  Main.cpp
Source/Bob/: Bob.cpp
Source/FireEngine/: CMakeLists.txt  Main.cpp
Source/FireEngine/Bob/: Bob.cpp  CMakeLists.txt
Testing/: CMakeLists.txt
Testing/FireEngine/: CMakeLists.txt
Testing/FireEngine/Math/: CMakeLists.txt  Vec3FloatTest.cpp  Vec3Test.hpp  Vec3TestFloat.cpp  Vec3TestFloat.hpp
TravisCI/: LinuxDependencies.sh  MacDependencies.sh
